# richman-game

./: index.html
.github/workflows/: deploy.yml
docs/: handoff-prompt.md
docs/plans/: 2026-07-14-wasm-port.md
wasm/: Cargo.toml
wasm/pkg/: package.json  rich_man_engine.d.ts  rich_man_engine.js  rich_man_engine_bg.wasm  rich_man_engine_bg.wasm.d.ts
wasm/src/: constants.rs  decisions.rs  engine.rs  events.rs  format.rs  lib.rs  rng.rs  state.rs  tax.rs
